--- a/Refactoring_CaloriesCalculator/Refactoring_CaloriesCalculator.csproj
+++ b/Refactoring_CaloriesCalculator/Refactoring_CaloriesCalculator.csproj
@@ -45,12 +45,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FemalePatient.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Gender.cs" />
+    <Compile Include="MalePatient.cs" />
     <Compile Include="Patient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
